# gamer-companion

./: .gitignore  CPU_AI_GAMER_COMPANION_BUILD_PLAN_v3_v4.md  pyproject.toml  requirements.txt
config/: settings.toml
docs/: AI_MANUAL.md  USER_MANUAL.md
game_profiles/: cs2.json  league_of_legends.json  valorant.json
gamer_companion/: __init__.py  __main__.py  anti_detection.py  config_system.py  game_registry.py  orchestrator.py  overlay_win32.py  steam_integration.py
gamer_companion/aim/: __init__.py  aim_engine.py  aim_humanizer.py  flick_system.py  prefire_engine.py  spray_controller.py  target_prioritizer.py  tracking_system.py
gamer_companion/audio_intel/: __init__.py  audio_classifier.py
gamer_companion/autonomous/: __init__.py  action_executor.py  cognition_engine.py  controller.py  mode_manager.py  perception_loop.py  safety_layer.py
gamer_companion/daemon/: control_panel.py  game_settings.py  game_watcher.py  tutorial.py
gamer_companion/emotion/: __init__.py  tilt_detector.py
gamer_companion/foundation/: __init__.py  auto_roi.py  frame_history.py  game_profile.py  perception_pipeline.py
gamer_companion/game_intelligence/: __init__.py  combat_engine.py  element_detector.py  movement_engine.py  navigation_engine.py  objective_tracker.py  resource_manager.py  universal_parser.py
gamer_companion/input_control/: __init__.py  gamepad_controller.py  humanizer.py  input_recorder.py  keyboard_controller.py  (+3 more)
logs/: ggi_2026-03-24.jsonl
tests/: test_all_games.py  test_control_panel.py  test_daemon.py  test_integration_v4.py  test_tutorial.py
(+33 files in other folders)
